--- a/index.html
+++ b/index.html
@@ -4,11 +4,87 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MyGame</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+      color: white;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 20px;
+    }
+    .logo {
+      font-size: 28px;
+      font-weight: 800;
+      margin-bottom: 16px;
+    }
+    .text {
+      font-size: 14px;
+      line-height: 1.5;
+      opacity: 0.95;
+      margin-bottom: 24px;
+    }
+    .btn {
+      background: white;
+      color: #2575fc;
+      border: none;
+      border-radius: 50px;
+      padding: 14px 0;
+      font-size: 17px;
+      font-weight: 600;
+      width: 100%;
+      max-width: 220px;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+    }
+    .community {
+      font-size: 13px;
+      opacity: 0.85;
+      margin-top: 24px;
+    }
+    .community a {
+      color: white;
+      text-decoration: underline;
+    }
+  </style>
 </head>
-<body style="font-family:sans-serif; text-align:center; padding:40px; background:#f0f7ff;">
-  <h2>MyGame</h2>
-  <p>The biggest gaming platform on Telegram!</p>
-  <p>Join the community<br>@mygamechannel</p>
-  <p>Perks, giveaways, airdrops & more</p>
+<body>
+  <div class="container">
+    <div class="logo">MyGame</div>
+    <div class="text">
+      The biggest gaming platform on Telegram!<br>
+      Join the community<br>
+      @mygamechannel<br>
+      Perks, giveaways, airdrops & more
+    </div>
+    <button class="btn" id="playBtn">Play Now</button>
+    <div class="community">
+      Follow updates at<br>
+      <a href="https://t.me/mygamechannel" target="_blank">@mygamechannel</a>
+    </div>
+  </div>
+
+  <script>
+    // Инициализация Telegram WebApp
+    if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+      Telegram.WebApp.ready();
+      Telegram.WebApp.expand();
+    }
+
+    // Кнопка Play Now — открывает игру (пока просто показывает уведомление)
+    document.getElementById('playBtn').addEventListener('click', () => {
+      if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+        Telegram.WebApp.showAlert('🎮 Игра скоро будет доступна!');
+        // В будущем: window.location.href = 'game.html';
+      } else {
+        alert('Откройте в Telegram!');
+      }
+    });
+  </script>
 </body>
 </html>
