--- a/index.html
+++ b/index.html
@@ -6,29 +6,34 @@
   <title>MyGame</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
-      color: white;
+      background: #f0f7ff;
+      color: #333;
       min-height: 100vh;
+      padding: 20px;
+    }
+    #menu, #game {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
-      padding: 20px;
+      min-height: 100vh;
     }
-    .logo {
-      font-size: 28px;
-      font-weight: 800;
-      margin-bottom: 16px;
+    #game { display: none; }
+
+    /* Стиль меню — как у GAMEE */
+    .menu-bg {
+      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+      color: white;
+      width: 100%;
+      padding: 40px 20px;
+      border-radius: 20px;
     }
-    .text {
-      font-size: 14px;
-      line-height: 1.5;
-      opacity: 0.95;
-      margin-bottom: 24px;
-    }
+    .logo { font-size: 28px; font-weight: 800; margin-bottom: 16px; }
+    .text { font-size: 14px; line-height: 1.5; opacity: 0.95; margin-bottom: 24px; }
     .btn {
       background: white;
       color: #2575fc;
@@ -47,44 +52,106 @@
       opacity: 0.85;
       margin-top: 24px;
     }
-    .community a {
+    .community a { color: white; text-decoration: underline; }
+
+    /* Стиль игры */
+    #score {
+      font-size: 36px;
+      margin: 20px;
+      color: #e91e63;
+    }
+    #tapBtn {
+      padding: 15px 30px;
+      font-size: 18px;
+      background: #e91e63;
       color: white;
-      text-decoration: underline;
+      border: none;
+      border-radius: 10px;
+    }
+    #backBtn {
+      margin-top: 20px;
+      background: #6a11cb;
+      color: white;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 8px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="logo">MyGame</div>
-    <div class="text">
-      The biggest gaming platform on Telegram!<br>
-      Join the community<br>
-      @mygamechannel<br>
-      Perks, giveaways, airdrops & more
-    </div>
-    <button class="btn" id="playBtn">Play Now</button>
-    <div class="community">
-      Follow updates at<br>
-      <a href="https://t.me/mygamechannel" target="_blank">@mygamechannel</a>
+  <!-- Главное меню -->
+  <div id="menu">
+    <div class="menu-bg">
+      <div class="logo">MyGame</div>
+      <div class="text">
+        The biggest gaming platform on Telegram!<br>
+        Join the community<br>
+        @mygamechannel<br>
+        Perks, giveaways, airdrops & more
+      </div>
+      <button class="btn" id="playBtn">Play Now</button>
+      <div class="community">
+        Follow updates at<br>
+        <a href="https://t.me/mygamechannel" target="_blank">@mygamechannel</a>
+      </div>
     </div>
   </div>
 
+  <!-- Игра -->
+  <div id="game">
+    <h2>Tap Game 🕹️</h2>
+    <p>Тапай, чтобы заработать очки!</p>
+    <div id="score">0</div>
+    <button id="tapBtn">TAP!</button>
+    <br>
+    <button id="backBtn">← Назад</button>
+  </div>
+
   <script>
-    // Инициализация Telegram WebApp
+    // Инициализация Telegram
     if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
       Telegram.WebApp.ready();
       Telegram.WebApp.expand();
     }
 
-    // Кнопка Play Now — открывает игру (пока просто показывает уведомление)
+    // Состояние
+    let score = 0;
+
+    // Элементы
+    const menu = document.getElementById('menu');
+    const game = document.getElementById('game');
+    const scoreEl = document.getElementById('score');
+
+    // Кнопка Play Now
     document.getElementById('playBtn').addEventListener('click', () => {
-      if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
-        Telegram.WebApp.showAlert('🎮 Игра скоро будет доступна!');
-        // В будущем: window.location.href = 'game.html';
-      } else {
-        alert('Откройте в Telegram!');
-      }
+      menu.style.display = 'none';
+      game.style.display = 'flex';
     });
+
+    // Кнопка Назад
+    document.getElementById('backBtn').addEventListener('click', () => {
+      menu.style.display = 'flex';
+      game.style.display = 'none';
+    });
+
+    // Тап
+    document.getElementById('tapBtn').addEventListener('click', () => {
+      score++;
+      scoreEl.textContent = score;
+    });
+
+    // Отправка результата (показываем кнопку Telegram)
+    if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+      Telegram.WebApp.MainButton.setText('Отправить результат').hide();
+      document.getElementById('tapBtn').addEventListener('click', () => {
+        Telegram.WebApp.MainButton.show();
+      });
+      Telegram.WebApp.MainButton.onClick(() => {
+        Telegram.WebApp.sendData(JSON.stringify({ score }));
+        Telegram.WebApp.close();
+      });
+    }
   </script>
 </body>
 </html>
