--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
   <title>MyGame</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #f5f7ff;
-      color: #333;
+      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+      color: white;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -23,74 +19,68 @@
       text-align: center;
       padding: 20px;
     }
-    .header {
-      font-size: 24px;
-      font-weight: 700;
+    .logo {
+      font-size: 28px;
+      font-weight: 800;
       margin-bottom: 16px;
+      letter-spacing: -0.5px;
     }
     .tagline {
       font-size: 14px;
-      opacity: 0.9;
-      margin-bottom: 24px;
       line-height: 1.5;
+      opacity: 0.95;
+      margin-bottom: 24px;
     }
     .btn {
-      background: #4CAF50;
-      color: white;
+      background: white;
+      color: #2575fc;
       border: none;
       border-radius: 50px;
-      padding: 14px 30px;
+      padding: 14px 0;
       font-size: 17px;
       font-weight: 600;
+      width: 100%;
+      max-width: 220px;
       cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
       margin-bottom: 20px;
     }
-    .footer {
-      font-size: 12px;
-      opacity: 0.7;
-      margin-top: 20px;
+    .community {
+      font-size: 13px;
+      opacity: 0.85;
+    }
+    .community a {
+      color: white;
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="header">MyGame</div>
-    <div class="tagline">
-      The biggest gaming platform on Telegram!<br>
-      Join the community @mygamechannel<br>
-      Perks, giveaways, airdrops & more
-    </div>
-    <button class="btn" id="playBtn">Play Now</button>
-    <div class="footer">© 2025 MyGame — All rights reserved</div>
+  <div class="logo">MyGame</div>
+  <div class="tagline">
+    The biggest gaming platform on Telegram!<br>
+    Join the community<br>
+    <a href="https://t.me/mygamechannel" target="_blank">@mygamechannel</a><br>
+    Perks, giveaways, airdrops & more
+  </div>
+  <button class="btn" id="playBtn">Play Now</button>
+  <div class="community">
+    Follow updates at<br>
+    <a href="https://t.me/mygamechannel" target="_blank">@mygamechannel</a>
   </div>
 
   <script>
-    // Обязательная инициализация Telegram WebApp
-    if (window.Telegram && Telegram.WebApp) {
+    // Telegram WebApp initialization
+    if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
       Telegram.WebApp.ready();
       Telegram.WebApp.expand();
-
-      // Настройка кнопки "Отправить результат"
-      Telegram.WebApp.MainButton.setText('Отправить результат').hide();
-      document.getElementById('playBtn').addEventListener('click', () => {
-        // Здесь можно начать игру или переключиться на другой экран
-        Telegram.WebApp.showAlert('🎮 Игра скоро будет доступна!');
-        Telegram.WebApp.MainButton.show();
-      });
-
-      // Обработчик нажатия на MainButton
-      Telegram.WebApp.MainButton.onClick(() => {
-        const data = { score: Math.floor(Math.random() * 100) }; // Пример данных
-        Telegram.WebApp.sendData(JSON.stringify(data));
-        Telegram.WebApp.close();
-      });
-    } else {
-      // Для отладки в браузере
-      document.getElementById('playBtn').addEventListener('click', () => {
-        alert('Игра запущена в браузере!');
-      });
     }
+
+    document.getElementById('playBtn').addEventListener('click', () => {
+      if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+        Telegram.WebApp.showAlert('🎮 Игра скоро будет доступна!');
+      }
+    });
   </script>
 </body>
 </html>
